--- a/CSS/index.css
+++ b/CSS/index.css
@@ -88,6 +88,37 @@ nav button {
   background-color: transparent;
 }
 
+.indexBackground {
+  background-image: url(https://i.postimg.cc/qv2xzDbf/jaredd-craig-HH4-WBGNyltc-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: auto;
+  height: 40rem;
+  width: fit-content;
+}
+
+.indexText {
+  height: 600px;
+  width: 500px;
+  margin: auto;
+  padding: 8rem 1rem 0 1rem;
+}
+
+.indexText p {
+  font-size: 1.5rem;
+  font-family: var(--primaryText);
+}
+
+.indexText h1 {
+  padding: 4rem 0;
+  font-size: 3rem;
+  font-family: var(--primaryText);
+}
+
+.indexText h1:hover {
+  color: var(--secondaryDark);
+}
+
 .footerName h3 {
   font-family: var(--primaryText);
 }
