fixed background, seeting up admin.js

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -28,7 +28,8 @@
   font-family: var(--secondaryText);
 }
 
-body main {
+body main,
+.mainBackground {
   background-color: var(--backgroundDark);
 }
 
