--- a/CSS/index.css
+++ b/CSS/index.css
@@ -178,6 +178,13 @@ footer {
   width: 15rem;
 }
 
+/* --------------------------------------------------------------Checkout----------------------------------------------------------------------- */
+
+.search {
+  color: var(--backgroundDark);
+  font-weight: bolder;
+}
+
 /* ------------------------------------------------------Imported Code From UIverse------------------------------------------------------------- */
 
 .center {
