started with form

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -182,6 +182,14 @@ nav button {
   font-weight: bolder;
 }
 
+/* --------------------------------------------------------------Checkout----------------------------------------------------------------------- */
+
+.firstName {
+}
+
+.secondName {
+}
+
 /* ------------------------------------------------------Imported Code From UIverse------------------------------------------------------------- */
 
 .center {
