--- a/CSS/index.css
+++ b/CSS/index.css
@@ -187,7 +187,7 @@ nav button {
   width: 18rem;
   height: 25rem;
   margin: 1rem auto;
-  border: 1px solid #f1f1f1;
+  border: 5px double var(--primaryDark);
   perspective: 1000px;
 }
 
@@ -215,14 +215,14 @@ nav button {
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-  background-color: #bbb;
-  color: black;
+  background-color: var(--secondaryDark);
+  color: var(--textDark);
 }
 
 /* Style the back side */
 .flip-card-back {
-  background-color: dodgerblue;
-  color: white;
+  background-color: var(--accentDark);
+  color: var(--textDark);
   transform: rotateY(180deg);
 }
 
