--- a/CSS/index.css
+++ b/CSS/index.css
@@ -230,13 +230,17 @@ nav button {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: max-content;
+}
+
+/* --------------------------------------------------------------Admin-------------------------------------------------------------------------- */
+table img {
+  height: 10rem;
+}
+
+table td {
+  border: var(--textDark) solid 5px;
+}
 /* --------------------------------------------------------------Checkout----------------------------------------------------------------------- */
-
-.firstName {
-}
-
-.secondName {
-}
 
 /* ------------------------------------------------------Imported Code From UIverse------------------------------------------------------------- */
 
